Add 'Error prone' analysis